gearset/main/default/objects/Account/fields/a_date_field__c.field-meta.xml
<CustomField>
    <fullName>a_date_field__c</fullName>
    <label>a date field</label>
    <type>Date</type>
</CustomField>