gearset/main/default/objects/Account/fields/a_date_time_field__c.field-meta.xml
<CustomField>
    <fullName>a_date_time_field__c</fullName>
    <label>a date time field</label>
    <type>DateTime</type>
</CustomField>