gearset/main/default/objects/Account/fields/aaa_something__c.field-meta.xml
<CustomField>
    <fullName>aaa_something__c</fullName>
    <label>aaa_something</label>
    <type>AutoNumber</type>
</CustomField>