gearset/main/default/objects/Account/fields/AccountExternalId__c.field-meta.xml
<CustomField>
    <fullName>AccountExternalId__c</fullName>
    <externalId>true</externalId>
    <label>AccountExternalId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>