gearset/main/default/objects/Account/fields/AFormula__c.field-meta.xml
<CustomField>
    <fullName>AFormula__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AFormula</label>
    <type>Checkbox</type>
</CustomField>