gearset/main/default/objects/Account/fields/autonumber__c.field-meta.xml
<CustomField>
    <fullName>autonumber__c</fullName>
    <label>autonumber</label>
    <type>AutoNumber</type>
</CustomField>