gearset/main/default/objects/Account/fields/bb_aaaa__c.field-meta.xml
<CustomField>
    <fullName>bb_aaaa__c</fullName>
    <label>bb__aaaa</label>
    <type>AutoNumber</type>
</CustomField>