gearset/main/default/objects/Account/fields/blah2__c.field-meta.xml
<CustomField>
    <fullName>blah2__c</fullName>
    <label>blah</label>
    <type>AutoNumber</type>
</CustomField>