gearset/main/default/objects/Account/fields/blah__c.field-meta.xml
<CustomField>
    <fullName>blah__c</fullName>
    <formula>Owner.Department = 'Textiles' &amp;&amp; LastActivityDate &gt; DATE(YEAR(TODAY()), MONTH(TODAY()), DAY(TODAY()) - 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>blah</label>
    <type>Checkbox</type>
</CustomField>