gearset/main/default/objects/Account/fields/compound_geolocation__c.field-meta.xml
<CustomField>
    <fullName>compound_geolocation__c</fullName>
    <label>compound geolocation</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>