gearset/main/default/objects/Account/fields/custom_lookup2__c.field-meta.xml
<CustomField>
    <fullName>custom_lookup2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>custom_lookup</label>
    <referenceTo>hed__Course__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>