gearset/main/default/objects/Account/fields/cvv__c.field-meta.xml
<CustomField>
    <fullName>cvv__c</fullName>
    <label>cvv</label>
    <length>3</length>
    <type>Text</type>
</CustomField>