gearset/main/default/objects/Account/fields/Dev1Field__c.field-meta.xml
<CustomField>
    <fullName>Dev1Field__c</fullName>
    <label>Dev1Field</label>
    <type>AutoNumber</type>
</CustomField>