gearset/main/default/objects/Account/fields/Dev2Field__c.field-meta.xml
<CustomField>
    <fullName>Dev2Field__c</fullName>
    <label>Dev2Field</label>
    <type>AutoNumber</type>
</CustomField>