gearset/main/default/objects/Account/fields/external__c.field-meta.xml
<CustomField>
    <fullName>external__c</fullName>
    <externalId>true</externalId>
    <label>external</label>
    <length>100</length>
    <type>Text</type>
</CustomField>