gearset/main/default/objects/Account/fields/external_id__c.field-meta.xml
<CustomField>
    <fullName>external_id__c</fullName>
    <externalId>true</externalId>
    <label>external id</label>
    <type>AutoNumber</type>
</CustomField>