gearset/main/default/objects/Account/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>