gearset/main/default/objects/Account/fields/externalidaaa__c.field-meta.xml
<CustomField>
    <fullName>externalidaaa__c</fullName>
    <externalId>true</externalId>
    <label>externalid</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>