gearset/main/default/objects/Account/fields/FieldABC__c.field-meta.xml
<CustomField>
    <fullName>FieldABC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FieldABC</label>
    <type>Checkbox</type>
</CustomField>