gearset/main/default/objects/Account/fields/long_field__c.field-meta.xml
<CustomField>
    <fullName>long_field__c</fullName>
    <label>long field</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>