gearset/main/default/objects/Account/fields/MyCustomField1__c.field-meta.xml
<CustomField>
    <fullName>MyCustomField1__c</fullName>
    <label>MyCustomField1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>