gearset/main/default/objects/Account/fields/MyCustomField2__c.field-meta.xml
<CustomField>
    <fullName>MyCustomField2__c</fullName>
    <label>MyCustomField2bbb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>