gearset/main/default/objects/Account/fields/MyCustomField3__c.field-meta.xml
<CustomField>
    <fullName>MyCustomField3__c</fullName>
    <label>MyCustomField3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>