gearset/main/default/objects/Account/fields/NewNewNew__c.field-meta.xml
<CustomField>
    <fullName>NewNewNew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NewNewNew</label>
    <type>Checkbox</type>
</CustomField>