gearset/main/default/objects/Account/fields/number__c.field-meta.xml
<CustomField>
    <fullName>number__c</fullName>
    <label>number</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>