gearset/main/default/objects/Account/fields/Oardvark__c.field-meta.xml
<CustomField>
    <fullName>Oardvark__c</fullName>
    <label>Oardvark</label>
    <type>AutoNumber</type>
</CustomField>