gearset/main/default/objects/Account/fields/Orange__c.field-meta.xml
<CustomField>
    <fullName>Orange__c</fullName>
    <label>Orange</label>
    <type>Date</type>
</CustomField>