gearset/main/default/objects/Account/fields/OwnerIsActive__c.field-meta.xml
<CustomField>
    <fullName>OwnerIsActive__c</fullName>
    <formula>Name = "TestAccount"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerIsActive</label>
    <type>Checkbox</type>
</CustomField>