gearset/main/default/objects/Account/fields/Recent_accounts_for_textiles_department__c.field-meta.xml
<CustomField>
    <fullName>Recent_accounts_for_textiles_department__c</fullName>
    <formula>Owner.Department = 'Textiles' &amp;&amp; LastActivityDate &gt; DATE(YEAR(TODAY()), MONTH(TODAY()), DAY(TODAY()) - 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recent accounts for textiles department</label>
    <type>Checkbox</type>
</CustomField>