gearset/main/default/objects/Account/fields/renamed__c.field-meta.xml
<CustomField>
    <fullName>renamed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>some field</label>
    <type>Checkbox</type>
</CustomField>