gearset/main/default/objects/Account/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <label>SLA</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
                <color>#F3D904</color>
                <label>Gold</label>
            </value>
            <value>
                <fullName>Silver</fullName>
                <color>#BBBBBB</color>
                <label>Silver</label>
            </value>
            <value>
                <fullName>Platinum</fullName>
                <color>#9999FF</color>
                <label>Platinum</label>
            </value>
            <value>
                <fullName>Bronze</fullName>
                <color>#A53711</color>
                <label>Bronze</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>