gearset/main/default/objects/Account/fields/some_field__c.field-meta.xml
<CustomField>
    <fullName>some_field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>some field</label>
    <type>Checkbox</type>
</CustomField>