gearset/main/default/objects/Account/fields/some_number__c.field-meta.xml
<CustomField>
    <fullName>some_number__c</fullName>
    <label>some number</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>