gearset/main/default/objects/Account/fields/test_external_id__c.field-meta.xml
<CustomField>
    <fullName>test_external_id__c</fullName>
    <externalId>true</externalId>
    <label>test_external_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>