gearset/main/default/objects/Account/fields/testing_pa__c.field-meta.xml
<CustomField>
    <fullName>testing_pa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>testing pa</label>
    <type>Checkbox</type>
</CustomField>