gearset/main/default/objects/Account/fields/textarea__c.field-meta.xml
<CustomField>
    <fullName>textarea__c</fullName>
    <label>textarea</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>