gearset/main/default/objects/Account/recordTypes/i_am_a_record_type.recordType-meta.xml
<RecordType>
    <fullName>i_am_a_record_type</fullName>
    <active>true</active>
    <label>i am a record type</label>
</RecordType>