gearset/main/default/objects/Account/recordTypes/Sports_Organization.recordType-meta.xml
<RecordType>
    <fullName>Sports_Organization</fullName>
    <active>true</active>
    <description>A sports organization.</description>
    <label>Sports Organization</label>
</RecordType>