gearset/main/default/objects/Account/listViews/NewThisWeek.listView-meta.xml
<ListView>
    <fullName>NewThisWeek</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>ACCOUNT.CREATED_DATE</field>
      <operation>equals</operation>
      <value>THIS_WEEK</value>
    </filters>
    <label>New This Week</label>
  </ListView>